# local-rag-project

./: .gitignore  .pre-commit-config.yaml  README.md  dependabot.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml  security-scan.yml
app/api/: main.py
app/ui/: main.py
chromadb/: chroma.sqlite3
docker/: app.Dockerfile  mlflow.Dockerfile
infra/k8s/kubeflow/: Chart.yaml
infra/k8s/ollama/: Chart.yaml  values.yaml
infra/k8s/ollama/templates/: deployment.yaml
ml/models/: rag_model.py
ml/pipelines/: embedding.py  ingestion.py  retriever.py
ml/tests/: conftest.py  test_api.py  test_embedding.py  test_ingestion.py  test_rag.py  test_retriever_metrics.py
