[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag-project"
version = "0.1.0"
description = "Privacy-first RAG with DeepSeek‑R1"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml*", "app*"]

[tool.black]
line-length = 80
target-version = ['py311']

[tool.flake8]
max-line-length = 80
exclude = [".venv", "build", "dist"]